Bug 385326 - X-Tilt and Y-Tilt curve settings are incorrect
Summary: X-Tilt and Y-Tilt curve settings are incorrect
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Brush engines (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Dmitry Kazakov
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-10-03 13:54 UTC by Alvin Wong
Modified: 2020-03-30 21:34 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alvin Wong 2017-10-03 13:54:50 UTC
I'm not very sure about this one. In the brush settings the graphs for X-Tilt and Y-Tilt have an x-axis range of -30° to 30°, but upon testing it appears to actually be (left to right) 60° to 0° of the absolute value of the tilt angle w.r.t the Windows tablet handling (I tested using pointer input events with the tilt fix patches, but it probably is the same for WinTab, but I am not really sure.)
Comment 1 Halla Rempt 2017-11-23 09:36:32 UTC
Qt at least puts it in the -60 to +60 range: http://doc.qt.io/qt-5/qtabletevent.html#xTilt
Comment 2 Dmitry Kazakov 2020-03-12 20:53:43 UTC
There is a "small" problem. Our "Tilt" sensor actually takes absolute value of the tilt. So, the actual range is 0...60deg.
Comment 3 Dmitry Kazakov 2020-03-13 17:50:25 UTC
The problem is going to be fixed in this MR:
https://invent.kde.org/kde/krita/-/merge_requests/265
Comment 4 Dmitry Kazakov 2020-03-30 21:34:39 UTC
Git commit 7ead80667e466b687b7424ba41ff26d13e41df6f by Dmitry Kazakov.
Committed on 12/03/2020 at 21:01.
Pushed by dkazakov into branch 'master'.

Fix labels for xTilt and yTilt sensors

Actual range of our tilt sensors is -60...0 degrees. The range is
reversed to work better with size/opacity options.

M  +6    -6    plugins/paintops/libpaintop/kis_dynamic_sensor.cc

https://invent.kde.org/kde/krita/commit/7ead80667e466b687b7424ba41ff26d13e41df6f