Fix labels for xTilt and yTilt sensors

Actual range of our tilt sensors is -60...0 degrees. The range is
reversed to work better with size/opacity options.

BUG:385326